# rdf4h-vocabulary-generator

./: README.md  rdf4h-vocabulary-generator.cabal  stack.yaml
src/Data/RDF/Vocabulary/Generator/: VocabularyGenerator.hs
