name:                rdf4h-vocabulary-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fabianmeyer/rdf4h-vocabulary-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Fabian Meyer
maintainer:          meyerf@gmail.com
copyright:           2017 Author name here
category:            Semantic Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.RDF.Vocabulary.Generator.VocabularyGenerator
  build-depends:       base >= 4.7 && < 5
                     , rdf4h
                     , template-haskell
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fabianmeyer/rdf4h-vocabulary-generator
